# noorinalabs-isnad-ingest-platform

./: .cspell.json  .env.example  .gitattributes  .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  RUNBOOK.md  docker-compose.yaml  pyproject.toml
.claude/lib/: pre_commit_ci_sync.py
.claude/lib/tests/: test_check_dockerfile_base_pin.py  test_pre_commit_ci_sync.py
.claude/memory/: MEMORY.md  project_data_pipeline_architecture.md  project_ecdsa_minerva_standing_item.md  project_main136_pipeline_e2e_lands_in_ingest.md
.claude/team/: charter.md  feedback_log.md  roster.json  trust_matrix.md
.claude/team/roster/: architect_sayed.md  data_engineer_imelda.md  data_lead_camila.md  devops_architect_bjorn.md  devops_engineer_fatima.md  engineer_leopold.md  engineer_yusuke.md  manager_adaeze.md  qa_engineer_tomas.md  security_engineer_kalinda.md  tech_lead_petra.md
.cspell/: project-words.txt
.github/branch-protection/: SPEC.md  apply-ruleset.sh  ruleset-main.json
.github/workflows/: cache-proof.yml  ci.yml  docs.yml  ghcr-publish.yml  structural-ontology.yml
docs/: pipeline-metrics-api.md  streaming_e2e_verification_p8w24.md
ontology/structural/: code-graph.json  llms.txt
scripts/: e2e_pipeline_run.py  structural_ontology.py
src/: cli.py  config.py
src/acquire/: sanadset.py
src/api/: __init__.py  app.py  auth.py  deps.py  metrics_router.py  reprocess_router.py  reset_router.py
src/enrich/: historical.py
src/graph/: load_edges.py  load_nodes.py
src/models/: enums.py
src/parse/: identity.py  open_hadith.py
src/pipeline/: audit.py  metrics.py  metrics_adapters.py  reprocess.py  reprocess_adapters.py  reset.py  reset_adapters.py  stages.py
src/utils/: grade.py  logging.py
tests/: conftest.py  test_config.py
tests/integration/: __init__.py  conftest.py  test_checkpoint_pg_restart.py  test_e2e_inprocess.py  test_graph_loading.py  test_ingest_neo4j_wall_clock.py  test_kafka_worker_e2e.py  test_minio_dedup_object_store.py  test_minio_reset_delete.py  test_pipeline_reset_rerun.py  test_pipeline_worker_chain.py  test_real_data_flow.py  test_worker_chain_e2e.py
tests/test_api/: test_metrics_endpoints.py  test_reprocess_endpoints.py  test_reset_endpoints.py
tests/test_graph/: test_load_edges.py  test_load_nodes.py
tests/test_parse/: test_identity.py
tests/test_pipeline/: test_audit.py  test_metrics.py  test_reprocess.py  test_reset.py  test_stages.py
tests/test_resolve/: test_dedup.py
tests/test_utils/: test_logging.py
tests/workers/: conftest.py  test_checkpoint_pg.py  test_dlq.py  test_ingest_neo4j.py  test_message.py  test_object_store.py  test_processors.py  test_runner.py  test_topics.py  test_worker_chain_inprocess.py
workers/: README.md  __init__.py
workers/dedup/: Dockerfile  __init__.py  main.py  processor.py
workers/enrich/: Dockerfile  __init__.py  main.py  processor.py
workers/ingest/: Dockerfile  __init__.py  main.py  processor.py  schema.py
workers/lib/: __init__.py  checkpoint_factory.py  checkpoint_pg.py  dlq.py  log.py  message.py  metrics.py  object_store.py  runner.py  topics.py
workers/normalize/: Dockerfile  __init__.py  main.py  processor.py
